Grouper les onglets par espace (refs #1299).